--- a/Trabalho 1/index.html
+++ b/Trabalho 1/index.html
@@ -23,6 +23,7 @@
     <script src="src/lib/dat.gui.min.js"></script>
     <script src="src/js/webgl.js"></script>
     <script src="src/js/utils.js"></script>
+    <script src="src/js/objects.js"></script>
     <script src="src/js/gui.js"></script>
     <script src="src/js/script.js"></script>
     <script src="src/js/index.js"></script>
