--- a/Trabalho Final/index.html
+++ b/Trabalho Final/index.html
@@ -32,8 +32,8 @@
         </span>
         <span class='messageArea'>Para jogar é necessário apenas a utilização do mouse.</span>
         <span class='messageArea'>Comandos:</span>
-        <span class='messageArea'>- Botão direito: empurra as bolas ao redor para longe</span>
-        <span class='messageArea'>- Botão esquerdo: controla a câmera</span>
+        <span class='messageArea'>- Botão esquerdo: empurra as bolas ao redor para longe</span>
+        <span class='messageArea'>- Botão direito: controla a câmera</span>
         <span class='messageArea'>- Botão do meio: zoom</span>
         <div class='buttonsContainer'>
           <button onClick='startGame()'>
